--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: kfigr
-Title: Integrated chunk anchoring and referencing for Rmarkdown documents.
+Title: Integrated Chunk Anchoring and Referencing for R Markdown Documents
 Version: 1.1.0
-Date: 2015-01-16
+Date: 2015-03-13
 Author: Michael Koohafkan
 Maintainer: Michael Koohafkan <michael.koohafkan@gmail.com>
-Description: A streamlined cross-referencing system for R markdown
+Description: A streamlined cross-referencing system for R Markdown
     documents that integrates with the knitr package. Defines a hook for
     anchoring code chunks and a function to track and cross-reference
     chunks that produce document elements such as figures and tables.
