--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2015-03-13
 Author: Michael Koohafkan
 Maintainer: Michael Koohafkan <michael.koohafkan@gmail.com>
 Description: A streamlined cross-referencing system for R Markdown
-    documents that integrates with the knitr package. Defines a hook for
+    documents that integrates with 'knitr'. Defines a hook for
     anchoring code chunks and a function to track and cross-reference
     chunks that produce document elements such as figures and tables.
 Depends: R (>= 3.1.0)
