--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: A streamlined cross-referencing system for R Markdown documents
     said chunks, e.g. figures and tables.
 Depends: R (>= 3.1.0)
 Imports: stats, knitr (>= 1.6)
-Suggests: ggplot2
+Suggests: ggplot2, markdown
 LazyData: true
 VignetteBuilder: knitr
 License: GPL (>= 3)
