--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: kfigr
 Title: Integrated Code Chunk Anchoring and Referencing for R Markdown Documents
 Version: 1.2.1
-Date: 2015-07-14
 Author: Michael C Koohafkan [aut, cre]
 Maintainer: Michael C Koohafkan <michael.koohafkan@gmail.com>
 Description: A streamlined cross-referencing system for R Markdown documents
@@ -17,3 +16,5 @@ VignetteBuilder: knitr
 License: GPL (>= 3)
 URL: https://github.com/mkoohafkan/kfigr 
 BugReports: https://github.com/mkoohafkan/kfigr/issues 
+RoxygenNote: 7.1.1
+Encoding: UTF-8
